--- a/app/src/main/res/layout/nav_header.xml
+++ b/app/src/main/res/layout/nav_header.xml
@@ -10,12 +10,15 @@
     <de.hdodenhof.circleimageview.CircleImageView
         android:layout_width="60dp"
         android:layout_height="60dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="10dp"
         android:src="@drawable/profile"/>
 
     <TextView
         android:id="@+id/user_name"
         android:layout_width="146dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
         android:paddingTop="8dp"
         android:text="@string/safa"
         android:textColor="@color/white"
@@ -25,6 +28,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
         android:text="@string/safa_email"
         android:textColor="@color/white"
         android:textSize="16sp" />
