--- a/app/src/main/res/layout/home_content.xml
+++ b/app/src/main/res/layout/home_content.xml
@@ -9,11 +9,13 @@
         android:id="@+id/toolbar"
         android:layout_width="409dp"
         android:layout_height="wrap_content"
-        android:background="@color/dark_grey"
         android:minHeight="?attr/actionBarSize"
-        android:theme="?attr/actionBarTheme"
         app:layout_constraintStart_toStartOf="parent"
+        android:textColor="@color/white"
+        android:background="@color/dark_grey"
         app:layout_constraintTop_toTopOf="parent" />
+<!--        android:theme="?attr/actionBarTheme"-->
+
 
     <TextView
         android:id="@+id/textView2"
@@ -32,7 +34,9 @@
         android:layout_height="673dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.512"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
+        app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/home_content_temporary" />
 </androidx.constraintlayout.widget.ConstraintLayout>
