--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -4,17 +4,29 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background_gradient"
     tools:context=".views.SignUp">
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textInputLayoutEmailSignUp"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
+        app:boxBackgroundColor="@color/white"
+
         android:layout_width="360dp"
         android:layout_height="wrap_content"
+        app:boxCornerRadiusBottomEnd="10dp"
+        app:boxCornerRadiusBottomStart="10dp"
+        app:boxCornerRadiusTopEnd="10dp"
+        app:boxCornerRadiusTopStart="10dp"
+
+        app:boxStrokeWidth="0dp"
+        app:boxStrokeWidthFocused="0dp"
+
         android:layout_marginStart="32dp"
         android:layout_marginTop="260dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="400dp"
         android:hint="@string/input_email"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -28,21 +40,31 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/textInputEditTextEmailSignUp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColorHint="#8D6E63" />
+            android:layout_height="wrap_content" />
     </com.google.android.material.textfield.TextInputLayout>
 
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textInputLayoutPasswordSignUp"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
+        app:boxBackgroundColor="@color/white"
+
+        app:boxStrokeWidth="0dp"
+        app:boxStrokeWidthFocused="0dp"
+
         android:layout_width="360dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginTop="400dp"
         android:layout_marginEnd="32dp"
         android:layout_marginBottom="300dp"
+        app:boxCornerRadiusBottomEnd="10dp"
+        app:boxCornerRadiusBottomStart="10dp"
+        app:boxCornerRadiusTopEnd="10dp"
+        app:boxCornerRadiusTopStart="10dp"
+
         android:hint="@string/input_password"
+
         app:errorEnabled="true"
         app:errorTextColor="@color/design_default_color_error"
         app:endIconMode="password_toggle"
@@ -58,24 +80,28 @@
             android:id="@+id/textInputEditTextPasswordSignUp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            android:textColorHint="@color/grey" />
+            android:inputType="textPassword"/>
     </com.google.android.material.textfield.TextInputLayout>
+
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/SignUpButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="360dp"
+        android:layout_height="53dp"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
-        android:text="Sign Up"
+        android:gravity="center"
+        android:text="@string/signup"
         android:textSize="20sp"
-        app:backgroundTint="@color/red"
+        app:backgroundTint="#DF4B3C"
+        app:cornerRadius="10dp"
+        app:elevation="50dp"
         app:layout_constrainedHeight="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/textInputLayoutPasswordSignUp" />
+
 
 
     <EditText
