--- a/app/src/main/res/layout/fragment_messages.xml
+++ b/app/src/main/res/layout/fragment_messages.xml
@@ -4,8 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#ECD9C4"
-    tools:context=".BlankFragment">
-
+    tools:context=".MessagesFragment">
 
     <TextView
         android:layout_width="wrap_content"
