--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:showIn="navigation_view"
+    tools:showIn="navigation_view">
 
->
+    <group android:checkableBehavior="single">
 
     <item
         android:id="@+id/nav_home"
@@ -25,18 +25,25 @@
         android:icon="@drawable/ic_absence"
         android:title="@string/trash"/>
 
-    <item
-        android:id="@+id/nav_settings"
-        android:icon="@drawable/ic_settings"
-        android:title="@string/settings"/>
+        <item
+            android:id="@+id/nav_share"
+            android:icon="@drawable/ic_transport"
+            android:title="@string/share"/>
+
+
+    </group>
 
     <item android:title="@string/profile">
+
         <menu>
+
+            <group>
 
             <item
                 android:id="@+id/nav_login"
-                android:icon="@drawable/ic_login"
-                android:title="@string/title"/>
+                android:icon="@drawable/ic_settings"
+                android:title="@string/settings"/>
+            </group>
 
         </menu>
     </item>
@@ -45,17 +52,15 @@
     <item android:title="@string/communicate">
 
         <menu>
+            <group>
 
-            <item
-                android:id="@+id/nav_share"
-                android:icon="@drawable/ic_transport"
-                android:title="@string/share"/>
 
             <item
                 android:id="@+id/nav_rate_us"
-                android:icon="@drawable/ic_rate_review"
+                android:icon="@drawable/ic_about_us"
                 android:title="@string/rate"/>
 
+            </group>
         </menu>
 
     </item>
