--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -6,6 +6,15 @@
     android:layout_height="match_parent"
     android:background="@drawable/background_gradient"
     tools:context=".views.SignUp">
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="632dp"
+        android:background="@drawable/gradient_white"
+        app:layout_constraintBottom_toBottomOf="parent" >
+
+    </RelativeLayout>
+
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textInputLayoutEmailSignUp"
         style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
@@ -84,61 +93,58 @@
     </com.google.android.material.textfield.TextInputLayout>
 
 
-    <com.google.android.material.button.MaterialButton
+    <android.widget.Button
         android:id="@+id/SignUpButton"
+
         android:layout_width="360dp"
-        android:layout_height="53dp"
+        android:layout_height="56dp"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
         android:gravity="center"
         android:text="@string/signup"
         android:textSize="20sp"
-        app:backgroundTint="#DF4B3C"
+        android:textColor="#F3F3F3"
+        android:background="@drawable/button_shape_try"
         app:cornerRadius="10dp"
-        app:elevation="50dp"
+        android:elevation="20dp"
+        android:padding="10dp"
         app:layout_constrainedHeight="true"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@+id/textInputLayoutPasswordSignUp" />
 
-
+    <RelativeLayout
+        android:layout_width="410dp"
+        android:layout_height="105dp"
+        android:background="@drawable/shadow_button_signup"
+        app:layout_constraintBottom_toBottomOf="@+id/SignUpButton"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/SignUpButton" />
 
     <EditText
         android:id="@+id/editTextTextPersonName"
-        android:layout_width="125dp"
-        android:layout_height="56dp"
-        android:elevation="@dimen/cardview_compat_inset_shadow"
-        android:ems="3"
-        android:inputType="textPersonName"
+        android:layout_width="119dp"
+        android:layout_height="60dp"
         android:text="Sign Up"
         android:textSize="30sp"
-        app:layout_constraintBottom_toTopOf="@+id/textInputLayoutEmailSignUp"
+        app:layout_constraintBottom_toBottomOf="@+id/textInputLayoutEmailSignUp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/espritLogo"
-        android:layout_width="101dp"
-        android:layout_height="130dp"
+        android:layout_width="132dp"
+        android:layout_height="143dp"
         android:layout_marginTop="-30dp"
-        android:layout_marginEnd="310dp"
+        android:layout_marginEnd="280dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/kisspng_esprit_higher_school_of_communication_of_tunis_con_emam_5b42b64c541ab4_5414050515310987003445_removebg_preview"
-        />
-
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="-210dp"
-        android:layout_marginEnd="-170dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_esprittriangles" />
+        app:srcCompat="@drawable/kisspng_esprit_higher_school_of_communication_of_tunis_con_emam_5b42b64c541ab4_5414050515310987003445_removebg_preview" />
 
 
     <ImageView
@@ -150,5 +156,16 @@
         android:src="@drawable/ic_esprittriangles"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageView2"
+        android:layout_width="280dp"
+        android:layout_height="338dp"
+        android:layout_marginTop="-170dp"
+        android:layout_marginEnd="-100dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/triangles" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
