--- a/app/src/main/res/layout/fragment_evaluation.xml
+++ b/app/src/main/res/layout/fragment_evaluation.xml
@@ -7,6 +7,7 @@
     tools:context=".EvaluationFragment">
 
     <TextView
+        android:id="@+id/resultat"
         android:layout_width="187dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
