-Fixed Settings ui

--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -35,24 +35,24 @@
             <TextView
                 android:id="@+id/usernameTextView"
                 style="@style/viewParent.headerText"
-                android:text="Kapil Mohan"
+                android:text="@string/safa"
                 android:textSize="18sp"
                 android:layout_toEndOf="@id/profileCircleImageView"
                 android:layout_marginTop="20dp"/>
 
             <TextView
                 style="@style/viewParent.headerText"
-                android:text="Edit personal details"
+                android:text="@string/safa_email"
                 android:textSize="16sp"
                 android:textColor="#5D5C5C"
                 android:layout_below="@id/usernameTextView"
                 android:layout_toEndOf="@id/profileCircleImageView"/>
 
-            <ImageView
-                style="@style/viewParent"
-                android:src="@drawable/ic_more"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"/>
+<!--            <ImageView-->
+<!--                style="@style/viewParent"-->
+<!--                android:src="@drawable/ic_more"-->
+<!--                android:layout_alignParentRight="true"-->
+<!--                android:layout_centerVertical="true"/>-->
 
         </RelativeLayout>
 
