-Fixed pdf viewer issues, now you can load a pdf file from assets in the timetable fragment

--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -103,10 +103,10 @@
             android:text="Logout" />
 
 
-        <TextView
-            style="@style/viewParent.headerText.settingsMiniTitle"
-            android:text="App ver 2.0.1"
-            android:textAlignment="center"/>
+<!--        <TextView-->
+<!--            style="@style/viewParent.headerText.settingsMiniTitle"-->
+<!--            android:text="App ver 2.0.1"-->
+<!--            android:textAlignment="center"/>-->
 
     </LinearLayout>
 </ScrollView>
