-Testing About fragment

--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -3,16 +3,33 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="#ECD9C4"
     tools:context=".AboutFragment">
 
+    <ImageView
+        android:id="@+id/imageView1"
+        android:layout_width="wrap_content"
+        android:layout_height="260dp"
+        android:layout_margin="10dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.512"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        app:srcCompat="@drawable/triangles" />
+
     <TextView
-        android:layout_width="187dp"
+        android:id="@+id/contenuAbout"
+        android:layout_width="364dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:text="@string/about_us"
-        android:textColor="@color/red"
-        android:textSize="40sp"
+        android:textColor="@color/black"
+        android:textSize="18sp"
         android:textStyle="bold" />
 
 </FrameLayout>
+
+
